--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -212,8 +212,8 @@
     "processed_train_sentences = sentence_rearrangement(train_sentences)\n",
     "processed_test_sentences = sentence_rearrangement(test_sentences)\n",
     "\n",
-    "print(len(processed_train_sentences))\n",
-    "print(len(processed_test_sentences))"
+    "print(len(processed_train_sentences)) #printing number of sentences in processed train dataset\n",
+    "print(len(processed_test_sentences)) #printing number of sentences in processed test dataset"
    ]
   },
   {
@@ -245,8 +245,8 @@
     "processed_train_labels = sentence_rearrangement(train_labels)\n",
     "processed_test_labels = sentence_rearrangement(test_labels)\n",
     "\n",
-    "print(len(processed_train_labels))\n",
-    "print(len(processed_test_labels))"
+    "print(len(processed_train_labels)) #printing number of labels in processed train dataset\n",
+    "print(len(processed_test_labels)) #printng number of labels in processed test dataset"
    ]
   },
   {
@@ -373,7 +373,6 @@
    },
    "outputs": [],
    "source": [
-    "# Let's define the features to get the feature value for one word.\n",
     "# Obtaining features for one word\n",
     "def getFeaturesForOneWord(sentence, pos, pos_tags):\n",
     "    word = sentence[pos]\n",
@@ -433,11 +432,11 @@
    "outputs": [],
    "source": [
     "def getFeaturesForOneSentence(sentence):\n",
-    "    processed_sent = model(sentence)\n",
+    "    processed_sentence = model(sentence)\n",
     "    pos_tags = []\n",
     "    \n",
-    "    for tok in processed_sent:\n",
-    "        pos_tags.append(tok.pos_)\n",
+    "    for token in processed_sentence:\n",
+    "        pos_tags.append(token.pos_)\n",
     "    \n",
     "    sentence_list = sentence.split()\n",
     "    return [getFeaturesForOneWord(sentence_list, pos, pos_tags) for pos in range(len(sentence_list))]"
@@ -527,7 +526,6 @@
     "train_set_labels = labels_rearrangement(train_labels)\n",
     "test_set_labels = labels_rearrangement(test_labels)\n",
     "\n",
-    "\n",
     "y_train = [getLabelsInListForOneSentence(labels) for labels in train_set_labels]\n",
     "y_test = [getLabelsInListForOneSentence(labels) for labels in test_set_labels]"
    ]
@@ -606,13 +604,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score is: 0.9057\n"
+      "F1 score: 0.9057\n"
      ]
     }
    ],
    "source": [
     "f1_score = metrics.flat_f1_score(y_test, y_pred, average='weighted')\n",
-    "print(f\"F1 score is: {round(f1_score,4)}\")"
+    "print(\"F1 score: {}\".format(round(f1_score,4)))"
    ]
   },
   {
@@ -621,7 +619,7 @@
     "id": "ORDyDw6sYHf5"
    },
    "source": [
-    "##Identifying Diseases and Treatments using Custom NER\n",
+    "## Identifying Diseases and Treatments using Custom NER\n",
     "\n",
     "We now use the CRF model's prediction to prepare a record of diseases identified in the corpus and treatments used for the diseases.\n",
     "\n"
@@ -660,8 +658,7 @@
     "for i in range(len(y_pred)):\n",
     "    val = y_pred[i]\n",
     "    \n",
-    "    Diseases = \"\" \n",
-    "    Treatments = \"\"\n",
+    "    Diseases, Treatments = \"\", \"\"\n",
     "    \n",
     "    for j in range(len(val)):\n",
     "        if val[j] == 'D': #indicating Diseases \n",
@@ -670,8 +667,8 @@
     "        elif val[j] == 'T': #indicating Treatments\n",
     "            Treatments += test_set_corpus[i].split()[j] + \" \"\n",
     "            \n",
-    "    Diseases = Diseases.lstrip().rstrip() #stripping away unnecessary spaces\n",
-    "    Treatments = Treatments.lstrip().rstrip()\n",
+    "    Diseases = Diseases.rstrip().lstrip() #stripping away unnecessary spaces\n",
+    "    Treatments = Treatments.rstrip().lstrip()\n",
     "    \n",
     "    if Diseases != \"\" and Treatments != \"\":\n",
     "        Diseases_list.append(Diseases)\n",
@@ -691,140 +688,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'radiotherapy'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "med_dict['hereditary retinoblastoma']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'hereditary retinoblastoma': 'radiotherapy',\n",
-       " 'unstable angina or non-Q-wave myocardial infarction': 'roxithromycin',\n",
-       " 'coronary-artery disease': 'Antichlamydial antibiotics',\n",
-       " 'foot infection': 'G-CSF treatment',\n",
-       " \"early Parkinson 's disease\": 'Ropinirole monotherapy',\n",
-       " 'female stress urinary incontinence': 'surgical treatment',\n",
-       " 'stress urinary incontinence': 'therapy',\n",
-       " 'preeclampsia ( proteinuric hypertension )': 'intrauterine insemination with donor sperm versus intrauterine insemination',\n",
-       " 'cancer': 'oral drugs chemotherapy',\n",
-       " 'major pulmonary embolism': 'Thrombolytic treatment right-side hemodynamics',\n",
-       " 'malignant pleural mesothelioma': 'thoracotomy , radiotherapy , and chemotherapy',\n",
-       " 'pulmonary symptoms attributable': 'chemotherapy',\n",
-       " 'non-obstructive azoospermia': 'testicular fine needle aspiration ( TEFNA ) open biopsy and testicular sperm extraction ( TESE )',\n",
-       " 'colorectal cancer': 'docosahexanoic acid ( DHA ) -concentrated fish oil',\n",
-       " 'bronchial asthma': 'Non-steroidal anti-inflammatory therapy',\n",
-       " 'primary stomach lymphoma': 'therapy',\n",
-       " \"Parkinson 's disease\": 'Microelectrode-guided posteroventral pallidotomy',\n",
-       " 'soft tissue sarcomas': 'Radiotherapy',\n",
-       " \"Eisenmenger 's syndrome\": 'laparoscopic cholecystectomy',\n",
-       " 'advanced esophageal cancer': 'adjuvant chemoradiotherapy with CDDP',\n",
-       " 'breast cancer': 'undergone subcutaneous mastectomy and immediate reconstruction',\n",
-       " 'inoperable advanced malignancies such as colorectal cancer': 'combination with leucovorin or cisplatin',\n",
-       " 'abdominal pain': 'thoracic paravertebral block ( tpvb )',\n",
-       " 'inflammatory skin diseases': 'topical corticosteroids',\n",
-       " 'unresectable stage iii nsclc': 'studies involving sequential chemotherapy',\n",
-       " 'nsclc nsclc ( stage iiib ) sclc': 'surgical treatment radiotherapy',\n",
-       " 'nsclc': 'chemotherapy',\n",
-       " 'extracorporeal photopheresis': 'concurrent acute rejection , therapy',\n",
-       " 'locally advanced non-small-cell lung cancer ( la-nsclc )': 'chemotherapy and radiotherapy )',\n",
-       " 'radiation-induced myelopathy': 'heparin and enoxaparin',\n",
-       " 'limited stage small cell lung cancer': 'vip combination chemotherapy',\n",
-       " 'malignant pleural effusions from nsclc': 'systemic chemotherapy',\n",
-       " 'small-cell lung cancer': 'combination chemotherapy',\n",
-       " 'intraluminal early-stage cancer': 'photodynamic therapy',\n",
-       " 'pathologic stage i non-small cell lung cancer': 'postoperative oral administration',\n",
-       " 'supraclavicular node metastases in nsclc': 'chemoradiotherapy',\n",
-       " 'non-small-cell-lung-cancer ( nsclc )': 'cisplatin and radiotherapy',\n",
-       " 'lung carcinoma': 'videothoracoscopic lobectomy or partial resection of the lung instead of an open thoracotomy',\n",
-       " 'stage 0 lung carcinoma': 'curative therapy',\n",
-       " 'single non-sclc ovarian carcinoma brain metastasis': 'surgical resection',\n",
-       " 'colorectal metastases': 'therapeutic vats metastasectomy',\n",
-       " 'advanced nsclc': 'assessing combination chemotherapy of cisplatin , ifosfamide and irinotecan with rhg-csf support',\n",
-       " 'metastatic colorectal cancer': 'intravenous oxaliplatin',\n",
-       " \"non-hodgkin 's lymphoma , breast cancer mesothelioma and non-small cell lung cancer\": 'oxaliplatin',\n",
-       " 'platinum-pretreated ovarian cancer': 'oxaliplatin',\n",
-       " 'non-small cell lung cancer advanced hormone refractory prostate cancer': 'combination with paclitaxel and carboplatin',\n",
-       " 'stage iii nsclc': 'chemotherapy administered before surgery',\n",
-       " 'small cell lung cancer': 'prophylactic cranial irradiation prolongs',\n",
-       " 'primary cancer': 'Immunotherapy',\n",
-       " 'advanced non -- small-cell lung cancer': 'paclitaxel plus carboplatin ( pc ) vinorelbine plus cisplatin ( vc )',\n",
-       " 'sclc limited disease extensive disease': 'platinum dose ( cisplatin plus carboplatin ) in combination chemotherapy combination therapy with carboplatin alone',\n",
-       " 'small cell lung cancer ( sclc ) untreated sclc': 'chemotherapy',\n",
-       " 'neutropenia during cancer': 'chemotherapy',\n",
-       " 'head and neck cancer =2 xerostomia': 'irradiation therapy intravenous amifostine',\n",
-       " 'psoriasis': 'topical therapy',\n",
-       " 'disseminated malignant melanoma': 'leukocyte A recombinant interferon ( rIFN-alpha A',\n",
-       " 'advanced stage ( TNM IIB-IVB ) mycosis fungoides': 'a combination chemotherapy program consisting of bleomycin and methotrexate weekly , doxorubicin every',\n",
-       " 'ventricular tachycardia': 'Guiding surgical therapy',\n",
-       " 'spinal adhesive arachnoiditis': 'Surgical management',\n",
-       " 'bronchiectasis': 'Current surgical therapy',\n",
-       " 'biliary dyskinesia': 'Cholecystectomy first-line therapy',\n",
-       " 'the common cold': 'pseudoephedrine plus acetaminophen',\n",
-       " 'acute nasopharyngitis ( ANP )': 'antibiotic treatment',\n",
-       " 'symptoms of a common cold': 'Macrolide antibiotics',\n",
-       " 'rhinovirus': 'clarithromycin',\n",
-       " 'infection': 'combination of omeprazole , amoxicillin , and clarithromycin',\n",
-       " 'persistent asthma': 'Contemporary asthma management guidelines list inhaled corticosteroids',\n",
-       " 'asthma': 'Fluticasone propionate several inhaled corticosteroids',\n",
-       " 'chronic hepatitis C': 'Combination therapy with interferon-alpha ( IFN alpha ) plus Ribavirin',\n",
-       " 'hepatitis C viremia': 'combination therapy',\n",
-       " 'duodenogastric reflux': 'cholecystectomy',\n",
-       " 'severe hypoxemia': 'glucocorticoid pulse therapy',\n",
-       " 'acute myocardial infarction': 'Thrombolytic therapy',\n",
-       " 'acute occlusion of the middle cerebral artery large embolus or high-grade stenosis': 'thrombolytic therapy',\n",
-       " 'benign prostatic hyperplasia': 'conservative pharmacological treatment',\n",
-       " 'autoimmune diseases': 'High-dose intravenous immunoglobulin ( hdIVIg )',\n",
-       " 'phaeochromocytoma': 'Adrenalectomy',\n",
-       " 'malignant melanoma': 'interferon alfa-2a',\n",
-       " 'advanced renal cell carcinoma': 'various interferon alpha preparations interferon alfa-N1 , interferon alfa-2a , and interferon alfa-2b',\n",
-       " 'hairy cell leukemia infection': 'antileukemic therapy',\n",
-       " \"low-grade non-Hodgkin 's lymphoma\": 'interferon alpha',\n",
-       " 'esophageal achalasia': 'botulinum toxin injection , pneumatic dilation , and laparoscopic myotomy',\n",
-       " 'mitomycin-resistant bladder cancer': 'photodynamic therapy in combination with mitomycin C',\n",
-       " 'B16 melanoma': 'adenosine triphosphate and treatment with buthionine sulfoximine',\n",
-       " 'primary uveal melanoma': 'transpupillary thermotherapy',\n",
-       " 'acute cerebral ischemia': 'Antiplatelet therapy',\n",
-       " 'renal cell carcinoma': 'Interferon treatment',\n",
-       " 'partial seizures': 'lamotrigine monotherapy',\n",
-       " 'myocardial angiogenesis': 'Gene therapy',\n",
-       " 'autoimmune hemolytic anemia': 'heparin',\n",
-       " 'epithelial ovarian cancer': 'High-dose chemotherapy',\n",
-       " 'multiple sclerosis': 'Intravenous immunoglobulin treatment',\n",
-       " 'cerebral palsy': 'Hyperbaric oxygen therapy',\n",
-       " 'postvitrectomy diabetic vitreous hemorrhage': 'Peripheral retinal cryotherapy',\n",
-       " 'hepatitis B': 'vaccine containing MF59',\n",
-       " 'temporomandibular joint arthropathy': 'arthroscopic treatment',\n",
-       " 'severe secondary peritonitis': 'Surgical management',\n",
-       " 'hepatic metastases from colorectal cancer': 'Hepatic arterial infusion of chemotherapy after resection',\n",
-       " 'responsive multiple myeloma': 'high-dose chemoradiotherapy with autologous stem-cell support'}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treament for hereditary retinoblastoma is radiotherapy\n"
+     ]
     }
    ],
    "source": [
-    "med_dict"
+    "print(\"Treament for hereditary retinoblastoma is {}\".format(med_dict['hereditary retinoblastoma']))"
    ]
   },
   {
